--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+lang: en-US
 title: Civic Tech Structure
 description: A 501(c)(3) nonprofit focused on supporting civic tech projects
 show_downloads: false
