--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 lang: en-US
 title: Civic Tech Structure
-description: The Civic Tech Structure, Inc. nonprofit seeks to improve existing structures and create new ones that make it easier to share replicable processes and practices so that the civic tech community can iterate on each other’s work, improving outcomes for the whole ecosystem.
+description: We seek to improve existing structures, and create new ones, making it easier to share replicable processes and practices so that the civic tech community can iterate on each other’s work, improving outcomes for the whole ecosystem.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
